# ParametricCurve

./: .clang-tidy  CMakeLists.txt  Curve.hpp  LICENSE  README.md  example.cpp
example/: CMakeLists.txt  arc_length_parameterized_bezier.cpp  arc_length_test.cpp  fit_bezier_curve.cpp  fit_cubic_spline.cpp  mini_bezier_test.cpp  simple_cubic_interpolation.cpp
include/: bezier.hpp  cubic_spline.hpp  curve.hpp  numerical.hpp
src/: bezier.hpp  cubic_spline.cpp  cubic_spline.hpp  curve.hpp  numerical.hpp
